--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -9,9 +9,7 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      - name: Run tests
-        run:
-          echo "Install dependencies"
-          npm install
-          echo "Run ToDo tests"
-          npm run test:ci
+      - name: Install dependencies
+        run: npm install
+      - name: Run ToDo tests
+        run: npm run test:ci
