--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -11,5 +11,43 @@ jobs:
         uses: actions/checkout@v4
       - name: Install dependencies
         run: npm install
+      - name: Install playwright
+        run: npx playwright install chromium
       - name: Run ToDo tests
         run: npm run test:ci
+
+
+# name: QA - Execute Playwright Smoke Tests on Dev and Stage Whiz
+# on:
+#   push:
+#     branches:
+#       - develop
+#       - stage
+#   pull_request:
+#     branches:
+#       - develop
+#       - stage
+# workflow_dispatch:
+# jobs:
+#   tests_e2e:
+#     name: Run end-to-end tests
+#     runs-on: [ubuntu-latest]
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v4
+#         with:
+#         fetch-depth: 10
+#       - uses: actions/setup-node@v3
+#         with:
+#         node-version: 16
+#       - name: install-test-dependencies
+#         run: cd packages/qa-automation && npm install
+#       - name: install-playwright
+#         run: cd packages/qa-automation && npx playwright install chromium
+#       - name: run tests
+#         run: cd packages/qa-automation && env=dev npx playwright test -g @Smoke --workers=1 --reporter=list --project=chromium
+#       - uses: act10ns/slack@v1
+#         with:
+#         status: ${{ job.status }}
+#         channel: ${{ env.SLACK_NOTIFY_CHANNEL }}
+#         if: always()
