--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "playwright test --headed",
-    "test:ci": "playwright test",
+    "test:ci": "playwright test --reporter=line",
     "ui": "playwright test --ui"
   },
   "keywords": [],
